--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,5 +20,15 @@ layout: pages
     {%- else -%}
         {{- content -}}
     {%- endif -%}
+    
+<div id="hyvor-talk-view"></div>
+<script type="text/javascript">
+    var HYVOR_TALK_WEBSITE = 1164; // DO NOT CHANGE THIS
+    var HYVOR_TALK_CONFIG = {
+        url: '{{ page.url | absolute_url }}',
+        id: '{{page.id}}'
+    };
+</script>
+<script async type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
 
 </div>
