--- a/assets/style.scss
+++ b/assets/style.scss
@@ -9,8 +9,8 @@
 
 
 html {
-  	font-family: 'Roboto', 'Linux Libertine, Bitstream Vera Sans, sans-serif';
-  	font-size: 1rem;
+  	font-family: 'Linux Libertine, Bitstream Vera Sans, sans-serif';
+  	font-size: 1.12rem;
   	font-weight: normal;
   	line-height: 1.35;
   	letter-spacing: 1px;
