--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,4 +31,7 @@ layout: pages
 </script>
 <script async type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
 
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
+
 </div>
